apps/base/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: default
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin:nightly-version-2025112405ubu2404
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
              ephemeral-storage: "200Mi"
            limits:
              memory: "512Mi"
              cpu: "1000m"
              ephemeral-storage: "500Mi"
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data       
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-tv
